# PEA_Projekt_3

./: CMakeLists.txt  README.md  main.cpp
algorithms/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
data/: DataReader.cpp  DataReader.h  Tests.cpp  Tests.h
graph/: TSPGraph.cpp  TSPGraph.h
representations/: GraphRep.cpp  GraphRep.h
xmlParser/: tinyxml2.cpp  tinyxml2.h
